A NPE fixed when creating and clearing a register quickly in a macro if the Registers view is open When clearing a register, the listeners are now notified
git-svn-id: svn+ssh://svn.code.sf.net/p/jedit/svn/jEdit/trunk@11466 6b1eeb88-9816-0410-afa2-b43733a0f04e